[package]
name = "adventof2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
gxhash = "3.5.0"
regex = "1.12.2"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "days"
harness = false

[[bench]]
name = "bigboy"
harness = false

[profile.release]
debug = true
